# cfa-agent

./: .coverage  .gitignore  CLAUDE.md  DEVELOPMENT.md  INSTALL.md  LICENCE  MIGRATION_RESPONSES_API.md  PLAN.md  README.md  agent.py  config.py  date.txt  main.py  memory.json.backup  memory.py  prompts.yaml  pyproject.toml  requirements.txt  test_mouse.py  tools.py
lalaby.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_french_goal.py  test_learning_goal.py  test_learning_time.py  test_memory.py  test_progress_comparison.py  test_week_check.py
